[gd_scene load_steps=43 format=3 uid="uid://v4il531v3qsr"]

[ext_resource type="Script" path="res://projeteis/fire_bullet/fire_bullet.gd" id="1_vtnhp"]
[ext_resource type="Texture2D" uid="uid://2fd3qxiwswpx" path="res://projeteis/fire_bullet/fire loop.png" id="2_5oys6"]
[ext_resource type="Texture2D" uid="uid://bux808qmcdnrp" path="res://projeteis/3/frames/1_5.png" id="3_dy7q5"]
[ext_resource type="Texture2D" uid="uid://vjotk81aukdl" path="res://projeteis/3/frames/1_6.png" id="4_fp61d"]
[ext_resource type="Texture2D" uid="uid://bbvx7qd4k187l" path="res://projeteis/3/frames/1_7.png" id="5_3v7jj"]
[ext_resource type="Texture2D" uid="uid://bk4v1nd6usew0" path="res://projeteis/3/frames/1_8.png" id="6_lae0o"]
[ext_resource type="Texture2D" uid="uid://b1p3sphs2om2r" path="res://projeteis/3/frames/1_9.png" id="7_lc1of"]
[ext_resource type="Texture2D" uid="uid://bpaw2ci0g6lpd" path="res://projeteis/3/frames/1_10.png" id="8_1eban"]
[ext_resource type="Texture2D" uid="uid://cuiny4tg07b6f" path="res://projeteis/3/frames/1_11.png" id="9_llnqn"]
[ext_resource type="Texture2D" uid="uid://0mmtstqmux20" path="res://projeteis/3/frames/1_12.png" id="10_wn3m0"]
[ext_resource type="Texture2D" uid="uid://chjctdlfjr1el" path="res://projeteis/3/frames/1_13.png" id="11_ivwub"]
[ext_resource type="Texture2D" uid="uid://1v200bl074rm" path="res://projeteis/3/frames/1_14.png" id="12_xa8dt"]
[ext_resource type="Texture2D" uid="uid://d3nimfnams5o8" path="res://projeteis/3/frames/1_15.png" id="13_yq66e"]
[ext_resource type="Texture2D" uid="uid://bdpt0flhq8svm" path="res://projeteis/3/frames/1_16.png" id="14_7xp1u"]
[ext_resource type="Texture2D" uid="uid://djiqynj0eiqfs" path="res://projeteis/3/frames/1_17.png" id="15_y5s8b"]
[ext_resource type="Texture2D" uid="uid://cj5hivas4d48" path="res://projeteis/3/frames/1_18.png" id="16_l3wj5"]
[ext_resource type="Texture2D" uid="uid://43buq7et06dx" path="res://projeteis/3/frames/1_19.png" id="17_uo2kf"]
[ext_resource type="Texture2D" uid="uid://co33lgkcbrav4" path="res://projeteis/3/frames/1_20.png" id="18_wmk22"]
[ext_resource type="Texture2D" uid="uid://cpb87x6a3r5yn" path="res://projeteis/3/frames/1_21.png" id="19_0x06l"]
[ext_resource type="Texture2D" uid="uid://dyqns1a56jcoi" path="res://projeteis/3/frames/1_22.png" id="20_hq7sb"]
[ext_resource type="Texture2D" uid="uid://houuiyri1o5p" path="res://projeteis/3/frames/1_23.png" id="21_q7xci"]
[ext_resource type="Texture2D" uid="uid://ce5r6v80b3fmo" path="res://projeteis/3/frames/1_24.png" id="22_lu7ws"]
[ext_resource type="Texture2D" uid="uid://blhm15ubelkvb" path="res://projeteis/3/frames/1_25.png" id="23_jl6ap"]
[ext_resource type="Texture2D" uid="uid://dcrwhwpivwu8k" path="res://projeteis/3/frames/1_26.png" id="24_dm4en"]
[ext_resource type="Texture2D" uid="uid://bkxdyms2nts0b" path="res://projeteis/3/frames/1_27.png" id="25_7paoo"]
[ext_resource type="Texture2D" uid="uid://dot168n6dtfis" path="res://projeteis/3/frames/1_28.png" id="26_4n5k1"]
[ext_resource type="Texture2D" uid="uid://cxk64la5d7t55" path="res://projeteis/3/frames/1_29.png" id="27_ahnu6"]
[ext_resource type="Texture2D" uid="uid://bfssvrig2m5tp" path="res://projeteis/3/frames/1_30.png" id="28_u6iht"]
[ext_resource type="Texture2D" uid="uid://dffcl13nglbhy" path="res://projeteis/3/frames/1_31.png" id="29_lpylg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kudo0"]
size = Vector2(25, 14)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1tf17"]
animation = &"destroy"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_7fc6w"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_t8x3c"]
graph_offset = Vector2(-139.213, 117.787)
nodes/Animation/node = SubResource("AnimationNodeAnimation_1tf17")
nodes/Animation/position = Vector2(120, 120)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_7fc6w")
nodes/TimeScale/position = Vector2(360, 120)
nodes/output/position = Vector2(580, 160)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x1201"]
animation = &"fire"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_t6krv"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_5dl5k"]
graph_offset = Vector2(-486.86, 55.8449)
nodes/Animation/node = SubResource("AnimationNodeAnimation_x1201")
nodes/Animation/position = Vector2(-240, 140)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_t6krv")
nodes/TimeScale/position = Vector2(80, 140)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5pyfp"]
states/End/position = Vector2(775, 100)
states/Start/position = Vector2(275, 100)
states/destroy/node = SubResource("AnimationNodeBlendTree_t8x3c")
states/destroy/position = Vector2(527, 99)
states/fire/node = SubResource("AnimationNodeBlendTree_5dl5k")
states/fire/position = Vector2(400, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_6t0h3"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dy7q5")
}, {
"duration": 1.0,
"texture": ExtResource("4_fp61d")
}, {
"duration": 1.0,
"texture": ExtResource("5_3v7jj")
}, {
"duration": 1.0,
"texture": ExtResource("6_lae0o")
}, {
"duration": 1.0,
"texture": ExtResource("7_lc1of")
}, {
"duration": 1.0,
"texture": ExtResource("8_1eban")
}, {
"duration": 1.0,
"texture": ExtResource("9_llnqn")
}, {
"duration": 1.0,
"texture": ExtResource("10_wn3m0")
}, {
"duration": 1.0,
"texture": ExtResource("11_ivwub")
}, {
"duration": 1.0,
"texture": ExtResource("12_xa8dt")
}, {
"duration": 1.0,
"texture": ExtResource("13_yq66e")
}, {
"duration": 1.0,
"texture": ExtResource("14_7xp1u")
}, {
"duration": 1.0,
"texture": ExtResource("15_y5s8b")
}, {
"duration": 1.0,
"texture": ExtResource("16_l3wj5")
}, {
"duration": 1.0,
"texture": ExtResource("17_uo2kf")
}, {
"duration": 1.0,
"texture": ExtResource("18_wmk22")
}, {
"duration": 1.0,
"texture": ExtResource("19_0x06l")
}, {
"duration": 1.0,
"texture": ExtResource("20_hq7sb")
}, {
"duration": 1.0,
"texture": ExtResource("21_q7xci")
}, {
"duration": 1.0,
"texture": ExtResource("22_lu7ws")
}, {
"duration": 1.0,
"texture": ExtResource("23_jl6ap")
}, {
"duration": 1.0,
"texture": ExtResource("24_dm4en")
}, {
"duration": 1.0,
"texture": ExtResource("25_7paoo")
}, {
"duration": 1.0,
"texture": ExtResource("26_4n5k1")
}, {
"duration": 1.0,
"texture": ExtResource("27_ahnu6")
}, {
"duration": 1.0,
"texture": ExtResource("28_u6iht")
}, {
"duration": 1.0,
"texture": ExtResource("29_lpylg")
}],
"loop": false,
"name": &"destroy",
"speed": 30.0
}]

[sub_resource type="Animation" id="Animation_fj03l"]
resource_name = "fire"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_5oys6")]
}

[sub_resource type="Animation" id="Animation_2mla7"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_nqiyj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6evs"]
_data = {
"RESET": SubResource("Animation_nqiyj"),
"destroy": SubResource("Animation_2mla7"),
"fire": SubResource("Animation_fj03l")
}

[node name="fire_bullet" type="Area2D" node_paths=PackedStringArray("animation_tree", "fire_bullet", "sumir", "animated")]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_vtnhp")
animation_tree = NodePath("AnimationTree")
speed = 3.0
fire_bullet = NodePath("Sprite2D")
sumir = NodePath("sumir")
animated = NodePath("AnimatedSprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7, 1)
rotation = -1.5708
scale = Vector2(0.785154, 0.785154)
hframes = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(-1.5, 1)
shape = SubResource("RectangleShape2D_kudo0")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_5pyfp")
anim_player = NodePath("../AnimationPlayer")
parameters/destroy/TimeScale/scale = 1.0
parameters/fire/TimeScale/scale = 1.2

[node name="sumir" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -10)
scale = Vector2(0.675, 0.675)
sprite_frames = SubResource("SpriteFrames_6t0h3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f6evs")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
